examples/test/testpolicy10783.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10783
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key35: value30
      key18: value0
      key21: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value49
          key1: value26
          key0: value45
      podSelector:
        matchLabels:
          key49: value47
          key5: value36
          key9: value12
